# HW_WEB_13_Task2

./: .gitignore  pyproject.toml
hw_web_10/: manage.py
hw_web_10/hw_web_10/: asgi.py  settings.py  urls.py  wsgi.py
hw_web_10/quotes/: forms.py  models.py  urls.py  views.py
hw_web_10/quotes/static/style/: style.css
hw_web_10/quotes/templates/quotes/: add_author.html  add_quote.html  author_detail.html  base.html  quotes_list.html
hw_web_10/users/: forms.py  urls.py  views.py
hw_web_10/users/templates/users/: login.html  signup.html
